[package]
name = "gotham-middleware-jwt"
version = "0.1.0"
authors = ["Nicholas Young <nyoung@uptime.ventures>"]
description = "JWT middleware for the Gotham web framework."
repository = "https://gitlab.com/uptimeventures/gotham-middleware-jwt"
keywords = ["gotham-middleware", "jwt", "jsonwebtoken", "authentication"]
readme = "README.md"
license = "BSD-3-Clause"

[dependencies]
futures = "0.1"
gotham = "0.3"
gotham_derive = "0.3"
serde = "1.0"
serde_derive = "1.0.69"
hyper = "0.12"
jsonwebtoken = "4.0"
log = "0.4.3"
