[package]
name = "gotham_middleware_jwt"
version = "0.3.0"
authors = ["Nicholas Young <nyoung@uptime.ventures>"]
description = "JWT middleware for the Gotham web framework."
repository = "https://gitlab.com/uptimeventures/gotham-middleware-jwt"
keywords = ["gotham-middleware", "jwt", "jsonwebtoken", "authentication"]
readme = "README.md"
license = "BSD-3-Clause"

[dependencies]
futures = "0.1.25"
gotham = "0.3.0"
gotham_derive = "0.3.0"
serde = "1.0.80"
serde_derive = "1.0.80"
hyper = "0.12.14"
jsonwebtoken = "5.0.1"
log = "0.4.6"
